# sxcu

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sxcu_cli.py
.github/workflows/: build.yml  code-quality.yml  codeql.yml  release.yml  test-suite.yml
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  examples.rst  index.rst  logging.rst  reference.rst
docs/source/_templates/autosummary/: class.rst
docs/source/reference/: sxcu.SXCU.rst  sxcu.og_properties.rst
logo/: LICENSE.FONT  README.md  full_logo.py  logo.py  pango_wrapper.py  thumbnail_logo.py
scxu/: __init__.py  sxcu.py
sxcu/: __client__.py  __init__.py  __logger__.py  __main__.py  __version__.py  _cli.py  _utils.py  cli.py  constants.py  exceptions.py  og_properties.py  sxcu.py
tests/: conftest.py  test_api.py  test_collections.py  test_og_properties.py  test_request_client.py  test_status_code.py  test_utils.py
tests/assets/: sxcu.net - python.is-ne.at.sxcu  sxcu.net - shx.gg.sxcu  sxcu.net - why-am-i-he.re.sxcu
